--- a/app/src/main/res/layout/activity_daily_updates.xml
+++ b/app/src/main/res/layout/activity_daily_updates.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/light_grey"
-    tools:context=".updates.DailyUpdatesActivity">
+    tools:context=".Updates.DailyUpdatesActivity">
 
     <ListView
         android:id="@+id/dailyUpdatesListView"
