--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -86,7 +86,7 @@
                                     android:layout_height="80dp"
                                     android:layout_centerHorizontal="true"
                                     android:layout_marginTop="10dp"
-                                    android:scaleType="centerCrop"
+                                    android:scaleType="centerInside"
                                     android:src="@drawable/daily_routine"></ImageView>
                                 <TextView
                                     android:layout_width="match_parent"
@@ -101,6 +101,45 @@
                                     android:textStyle="bold"></TextView>
                             </RelativeLayout>
                         </androidx.cardview.widget.CardView>
+
+
+                        <androidx.cardview.widget.CardView
+                            android:id="@+id/cardview_salat_time"
+                            android:layout_width="120dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="5sp"
+                            android:layout_weight="1"
+                            android:clickable="true"
+                            android:foreground="?attr/selectableItemBackground"
+                            app:cardBackgroundColor="@color/white"
+                            app:cardCornerRadius="15dp"
+                            app:cardElevation="4dp"
+                            app:cardUseCompatPadding="true">
+                            <RelativeLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent">
+                                <ImageView
+                                    android:id="@+id/img_salat_time"
+                                    android:layout_width="100dp"
+                                    android:layout_height="80dp"
+                                    android:layout_centerHorizontal="true"
+                                    android:layout_marginTop="10dp"
+                                    android:scaleType="centerInside"
+                                    android:src="@drawable/salat_time"></ImageView>
+                                <TextView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_below="@id/img_salat_time"
+                                    android:layout_marginTop="5dp"
+                                    android:layout_marginBottom="2sp"
+                                    android:text="Salat Time"
+                                    android:textAlignment="center"
+                                    android:textColor="@color/navy_blue"
+                                    android:textSize="16dp"
+                                    android:textStyle="bold"></TextView>
+                            </RelativeLayout>
+                        </androidx.cardview.widget.CardView>
+
 
                         <androidx.cardview.widget.CardView
                             android:layout_width="120dp"
