--- a/app/src/main/res/layout/activity_daily_updates.xml
+++ b/app/src/main/res/layout/activity_daily_updates.xml
@@ -37,7 +37,7 @@
                 android:onClick="back"
                 android:padding="1sp"
                 app:srcCompat="@drawable/baseline_arrow_back_24"
-                tools:ignore="ContentDescription" />
+                tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -57,6 +57,7 @@
         android:id="@+id/dailyUpdatesListView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingBottom="60sp"
         android:listSelector="@android:color/transparent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
